--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,57 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body{
+  margin: 0;
+  background:#eee;
+  height:auto;
+}
+h1 {
+  font-weight: 400;
+  font-size: 2.5rem;
+  margin: 0;
 }
 
-a {
-  color: #00B7FF;
+h3 {
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+main{
+  max-width:100vw;
+
+  margin:0 auto;
+
+}
+
+.landing-page{
+  display:flex;
+  height:100vh;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+ background:url('https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_1280.jpg');
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-position:center;
+}
+
+.landing-text-inner{
+  background:rgba(0,0,0,0.6);
+  padding:5rem 3rem;
+  color:#fff;
+  display:block;
+  width:75%
+}
+.btn{
+  text-decoration:none;
+  color:#fff;
+  border:1px solid #eeeeee;
+  padding:1rem 3rem;
+  display:inline-block;
+  margin:2rem 0 0;
+  border-radius:50px;
+  transition: all 700ms ease-out;
+}
+.btn:hover{
+  background:#ccc;
+  color:#000;
 }
