--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,7 @@ main{
   justify-content:center;
   align-items:center;
   text-align:center;
- background:url('https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_1280.jpg');
+ background:url('../images/bg.jpg');
   background-size:cover;
   background-repeat:no-repeat;
   background-position:center;
